--- a/omaha-commerce/static/index.html
+++ b/omaha-commerce/static/index.html
@@ -1,4 +1,4 @@
-<html lang="en" ng-app="app">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,19 +6,18 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Omaha Commerce</title>
-    <link href="css/lib/bootstrap/bootstrap.min.css" rel="stylesheet">
-    <script src="js/lib/jquery/jquery.min.js"></script>
-    <script src="js/lib/bootstrap/bootstrap.min.js"></script>
-    <script src="js/lib/angular/angular.min.js"></script>
-    <script src="js/src/app/app.js"></script>
-    <script src="js/src/services/index.services.js"></script>
-    <script src="js/src/controllers/index.controller.js"></script>
+
+    <script language="javascript">
+
+      window.location.href = "pages/index.html";
+
+    </script>
+
 </head>
 
-  <body ng-controller="IndexController">
+  <body>
 
-      <input ng-model="teste"/>{{teste}}
-
+    Go to <a href="pages/index.html">/pages/index.html</a>
 
   </body>
 
