--- a/omaha-commerce/static/pages/index.html
+++ b/omaha-commerce/static/pages/index.html
@@ -29,35 +29,62 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Home</a>
+                <a class="navbar-brand" href="#">Principal</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">About</a>
+                    <li class="dropdown" ng-show="usuario.tipo === 'A'">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            Administração
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Usuários </a></li>
+                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Conta de e-Mail </a></li>
+                        </ul>
                     </li>
-                    <li>
-                        <a href="#">Contact</a>
+                    <li class="dropdown" ng-show="usuario.tipo === 'P' || usuario.tipo === 'A'">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            Cadastros
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Categorias </a></li>
+                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Produtos </a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" ng-show="usuario.tipo === 'P' || usuario.tipo === 'A'">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            Vendas
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Pedidos em Aberto </a></li>
+                        </ul>
                     </li>
                     <li class="dropdown">
-
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            Conta
+                            Minha Conta
                         </a>
-
-                        <ul class="dropdown-menu dropdown-user">
-                            <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                        <ul class="dropdown-menu dropdown-user" ng-show="usuario">
+                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Configurações Pessoais</a>
                             </li>
-                            <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                            <li ng-show="usuario.tipo === 'C'"><a href="#"><i class="fa fa-gear fa-fw"></i> Histórico de Pedidos</a>
+                            </li>
+                            <li ng-show="usuario.tipo === 'C'"><a href="#"><i class="fa fa-gear fa-fw"></i> Carrinho de Compras</a>
                             </li>
                             <li class="divider"></li>
-                            <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                            <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Sair</a>
                             </li>
                         </ul>
-
+                        <ul class="dropdown-menu dropdown-user" ng-show="!usuario">
+                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Acessar minha conta</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Cadastrar nova conta</a>
+                            </li>
+                        </ul>
                     </li>
-                </ul>
 
+                </ul>
+                <p class="navbar-text navbar-right" ng-show="usuario.nome">Bem vindo, {{usuario.nome}}</p>
             </div>
         </div>
     </nav>
