--- a/omaha-commerce/static/pages/index.html
+++ b/omaha-commerce/static/pages/index.html
@@ -14,9 +14,11 @@
     <script src="../js/lib/angular/angular.min.js"></script>
     <script src="../js/lib/angular/angular-route.min.js"></script>
     <script src="../js/src/app/app.js"></script>
+    <script src="../js/src/services/usuario.service.js"></script>
     <script src="../js/src/services/login.service.js"></script>
     <script src="../js/src/services/loja.service.js"></script>
     <script src="../js/src/services/index.service.js"></script>
+    <script src="../js/src/controllers/usuario.controller.js"></script>
     <script src="../js/src/controllers/login.controller.js"></script>
     <script src="../js/src/controllers/loja.controller.js"></script>
     <script src="../js/src/controllers/index.controller.js"></script>
@@ -82,7 +84,7 @@
                             <li><a href="#/login"><i class="fa fa-user fa-fw"></i> Acessar minha conta</a>
                             </li>
                             <li class="divider"></li>
-                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Cadastrar nova conta</a>
+                            <li><a href="#/usuario"><i class="fa fa-user fa-fw"></i> Cadastrar nova conta</a>
                             </li>
                         </ul>
                     </li>
