--- a/omaha-commerce/static/pages/index.html
+++ b/omaha-commerce/static/pages/index.html
@@ -1,4 +1,5 @@
 <html lang="en" ng-app="app">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,6 @@
     <meta name="author" content="">
     <title>Omaha Commerce</title>
     <link href="../css/lib/bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/lib/bootstrap/bootstrap-theme.min.css" rel="stylesheet">
     <link href="../css/src/shop-homepage.css" rel="stylesheet">
     <script src="../js/lib/jquery/jquery.min.js"></script>
     <script src="../js/lib/bootstrap/bootstrap.min.js"></script>
@@ -24,7 +24,7 @@
     <script src="../js/src/controllers/index.controller.js"></script>
 </head>
 
-  <body ng-controller="IndexController">
+<body ng-controller="IndexController">
 
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -35,7 +35,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Principal</a>
+                <a class="navbar-brand" href="#/loja">Principal</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
@@ -44,8 +44,8 @@
                             Administração
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Usuários </a></li>
-                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Conta de e-Mail </a></li>
+                            <li><a href="#/usuario"><i class="fa fa-user fa-fw"></i> Usuários </a></li>
+                            <li ng-show="false"><a href="#"><i class="fa fa-user fa-fw"></i> Conta de e-Mail </a></li>
                         </ul>
                     </li>
                     <li class="dropdown" ng-show="usuario.tipo === 'P' || usuario.tipo === 'A'">
@@ -53,8 +53,8 @@
                             Cadastros
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Categorias </a></li>
-                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Produtos </a></li>
+                            <li><a href="#/categoria"><i class="fa fa-user fa-fw"></i> Categorias </a></li>
+                            <li><a href="#/produto"><i class="fa fa-user fa-fw"></i> Produtos </a></li>
                         </ul>
                     </li>
                     <li class="dropdown" ng-show="usuario.tipo === 'P' || usuario.tipo === 'A'">
@@ -62,7 +62,7 @@
                             Vendas
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Pedidos em Aberto </a></li>
+                            <li><a href="#/venda"><i class="fa fa-user fa-fw"></i> Pedidos em Aberto </a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -70,23 +70,23 @@
                             Minha Conta
                         </a>
                         <ul class="dropdown-menu dropdown-user" ng-show="usuario">
-                            <li><a href="#"><i class="fa fa-user fa-fw"></i> Configurações Pessoais</a>
-                            </li>
-                            <li ng-show="usuario.tipo === 'C'"><a href="#"><i class="fa fa-gear fa-fw"></i> Histórico de Pedidos</a>
-                            </li>
-                            <li ng-show="usuario.tipo === 'C'"><a href="#"><i class="fa fa-gear fa-fw"></i> Carrinho de Compras</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Sair</a>
-                            </li>
-                        </ul>
-                        <ul class="dropdown-menu dropdown-user" ng-show="!usuario">
-                            <li><a href="#/login"><i class="fa fa-user fa-fw"></i> Acessar minha conta</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li><a href="#/usuario"><i class="fa fa-user fa-fw"></i> Cadastrar nova conta</a>
-                            </li>
-                        </ul>
+                            <li><a href="#/usuario"><i class="fa fa-user fa-fw"></i> Configurações Pessoais </a></li>
+                    </li>
+                    <li ng-show="usuario.tipo === 'C'"><a href="#"><i class="fa fa-gear fa-fw"></i> Histórico de Pedidos</a>
+                    </li>
+                    <li ng-show="usuario.tipo === 'C'"><a href="#"><i class="fa fa-gear fa-fw"></i> Carrinho de Compras</a>
+                    </li>
+                    <li class="divider"></li>
+                    <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Sair</a>
+                    </li>
+                    </ul>
+                    <ul class="dropdown-menu dropdown-user" ng-show="!usuario">
+                        <li><a href="#/login"><i class="fa fa-user fa-fw"></i> Acessar minha conta</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li><a href="#/usuario"><i class="fa fa-user fa-fw"></i> Cadastrar nova conta</a>
+                        </li>
+                    </ul>
                     </li>
 
                 </ul>
@@ -96,7 +96,7 @@
     </nav>
 
     <div class="container">
-      <div ng-view></div>
+        <div ng-view></div>
     </div>
 
     <div class="container">
@@ -113,6 +113,6 @@
 
     </div>
 
-  </body>
+</body>
 
 </html>
