--- a/omaha-commerce/static/pages/produto.html
+++ b/omaha-commerce/static/pages/produto.html
@@ -9,10 +9,10 @@
 
 <body>
 
-    <div class="container-fluid" ng-controller="UsuarioController as uc" ng-init="uc.init()">
+    <div class="container-fluid" ng-controller="ProdutoController as pc" ng-init="pc.init()">
 
         <div class="page-header">
-            <h3> Cadastro de Usuário </h3>
+            <h3> Cadastro de Produto </h3>
         </div>
 
         <form class="form-horizontal">
@@ -24,7 +24,7 @@
                 </div>
 
                 <div class="col-md-1">
-                    <input id="campoId" type="text" class="form-control" placeholder="#" ng-model="uc.usuario.id" readonly/>
+                    <input id="campoId" type="text" class="form-control" placeholder="#" ng-model="pc.produto.id" readonly/>
                 </div>
 
             </div>
@@ -34,11 +34,11 @@
             <div class="row">
 
                 <div class="col-md-1">
-                    <label for="campoNome" class="control-label">Nome</label>
+                    <label for="campoNome" class="control-label">Produto</label>
                 </div>
 
                 <div class="col-md-8">
-                    <input id="campoNome" type="text" class="form-control" ng-minLength="5" placeholder="Nome do Usuário" ng-model="uc.usuario.nome" />
+                    <input id="campoNome" type="text" class="form-control" ng-minLength="5" placeholder="Nome do Produto" ng-model="pc.produto.nome" />
                 </div>
 
                 <div class="col-md-1">
@@ -207,7 +207,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Listagem de Usuários</h4>
+                        <h4 class="modal-title" id="myModalLabel">Listagem de Produtos</h4>
                     </div>
                     <div class="modal-body">
                         <p>
@@ -216,7 +216,7 @@
                                     <div class="col-md-12">
                                         <div class="input-group">
                                             <div class="input-group-addon">Pesquisar</div>
-                                            <input type="text" class="form-control" id="campoPesquisar" ng-model="filtroUsuarios" placeholder="Digite aqui seu parâmetro de pesquisa" />
+                                            <input type="text" class="form-control" id="campoPesquisar" ng-model="filtroProdutos " placeholder="Digite aqui seu parâmetro de pesquisa" />
                                         </div>
                                     </div>
                                 </div>
@@ -227,8 +227,8 @@
                             <thead>
                                 <tr>
                                     <th>Identificador</th>
-                                    <th>Nome</th>
-                                    <th>CPF</th>
+                                    <th>Descrição</th>
+                                    <th>Valor</th>
                                     <th></th>
                                 </tr>
                             </thead>
@@ -236,14 +236,14 @@
                             <tbody>
                                 <!-- Listagem dos registros será aqui -->
 
-                                <tr ng-repeat="usuarioAtual in uc.usuarios | filter: filtroUsuarios">
+                                <tr ng-repeat="produtoAtual in pc.produtos | filter: filtroProdutos">
 
-                                    <td> {{usuarioAtual.id}} </td>
-                                    <td> {{usuarioAtual.nome}} </td>
-                                    <td> {{usuarioAtual.cpf}} </td>
+                                    <td> {{produtoAtual.id}} </td>
+                                    <td> {{produtoAtual.descricao}} </td>
+                                    <td> {{produtoAtual.valor}} </td>
 
                                     <td>
-                                        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="uc.editar(usuarioAtual)" ng-model="editar" data-toggle="tooltip" data-placement="left" title="Tooltip on left">
+                                        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="pc.editar(produtoAtual)" ng-model="editar" data-toggle="tooltip" data-placement="left" title="Tooltip on left">
                                           <span class="glyphicon glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                       </button>
                                     </td>
