--- a/omaha-commerce/static/pages/usuario.html
+++ b/omaha-commerce/static/pages/usuario.html
@@ -51,7 +51,7 @@
 
             </p>
 
-            <div class="row">''
+            <div class="row">
 
                 <div class="col-md-1">
                     <label for="campoCpf" class="control-label">CPF</label>
