CRUD usuário - método create

--- a/omaha-commerce/static/pages/usuario.html
+++ b/omaha-commerce/static/pages/usuario.html
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="col-md-8">
-                    <input id="campoNome" type="text" class="form-control" ng-minLength="5" placeholder="Nome do Usuário" ng-model="uc.usuario.nome" />
+                    <input id="campoNome" type="text" class="form-control" placeholder="Nome do Usuário" ng-model="uc.usuario.nome" />
                 </div>
 
                 <div class="col-md-1">
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="col-md-2">
-                    <input id="campoDataNascimento" type="date" class="form-control" ng-minLength="5" placeholder="Data de nascimento do Usuário" ng-model="uc.usuario.dataNascimento" />
+                    <input id="campoDataNascimento" type="text" class="form-control" placeholder="Data de nascimento do Usuário" ng-model="uc.usuario.dataNascimento" />
                 </div>
 
             </div>
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="col-md-2">
-                    <input id="campoCpf" type="text" class="form-control" ng-minLength="5" placeholder="CPF do Usuário" ng-model="uc.usuario.cpf" />
+                    <input id="campoCpf" type="text" class="form-control" placeholder="CPF do Usuário" ng-model="uc.usuario.cpf" />
                 </div>
 
                 <div class="col-md-1">
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <input id="campoEmail" type="email" class="form-control" ng-minLength="5" placeholder="E-mail do Usuário" ng-model="uc.usuario.email" />
+                    <input id="campoEmail" type="email" class="form-control" placeholder="E-mail do Usuário" ng-model="uc.usuario.email" />
                 </div>
 
                 <div class="col-md-1">
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <input id="campoSenha" type="password" class="form-control" ng-minLength="5" placeholder="Senha" ng-model="uc.usuario.senha" />
+                    <input id="campoSenha" type="password" class="form-control" placeholder="Senha" ng-model="uc.usuario.senha" />
                 </div>
 
             </div>
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="col-md-9">
-                    <input id="campoRua" type="text" class="form-control" ng-minLength="5" placeholder="Rua do Usuário" ng-model="uc.usuario.rua" />
+                    <input id="campoRua" type="text" class="form-control" placeholder="Rua do Usuário" ng-model="uc.usuario.rua" />
                 </div>
 
                 <div class="col-md-1">
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="col-md-1">
-                    <input id="campoNumero" type="text" class="form-control" ng-minLength="5" placeholder="Nro" ng-model="uc.usuario.numero" />
+                    <input id="campoNumero" type="text" class="form-control" placeholder="Nro" ng-model="uc.usuario.numero" />
                 </div>
 
             </div>
@@ -110,7 +110,7 @@
                 </div>
 
                 <div class="col-md-5">
-                    <input id="campoRua" type="text" class="form-control" ng-minLength="5" placeholder="Bairro do Usuário" ng-model="uc.usuario.bairro" />
+                    <input id="campoRua" type="text" class="form-control" placeholder="Bairro do Usuário" ng-model="uc.usuario.bairro" />
                 </div>
 
                 <div class="col-md-1">
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="col-md-5">
-                    <input id="campoComplemento" type="text" class="form-control" ng-minLength="5" placeholder="Complemento" ng-model="uc.usuario.complemento" />
+                    <input id="campoComplemento" type="text" class="form-control" placeholder="Complemento" ng-model="uc.usuario.complemento" />
                 </div>
 
             </div>
@@ -132,7 +132,7 @@
                 </div>
 
                 <div class="col-md-6">
-                    <input id="campoCidade" type="text" class="form-control" ng-minLength="5" placeholder="Cidade do Usuário" ng-model="uc.usuario.cidade" />
+                    <input id="campoCidade" type="text" class="form-control" placeholder="Cidade do Usuário" ng-model="uc.usuario.cidade" />
                 </div>
 
                 <div class="col-md-1">
@@ -140,7 +140,7 @@
                 </div>
 
                 <div class="col-md-2">
-                    <input id="campoCep" type="text" class="form-control" ng-minLength="5" placeholder="Cep do Usuário" ng-model="uc.usuario.cep" />
+                    <input id="campoCep" type="text" class="form-control" placeholder="Cep do Usuário" ng-model="uc.usuario.cep" />
                 </div>
 
                 <div class="col-md-1">
@@ -166,7 +166,7 @@
                 </div>
 
                 <div class="col-md-5">
-                    <input id="campoTelefone" type="text" class="form-control" ng-minLength="5" placeholder="Telefone do Usuário" ng-model="uc.usuario.telefone" />
+                    <input id="campoTelefone" type="text" class="form-control" placeholder="Telefone do Usuário" ng-model="uc.usuario.telefone" />
                 </div>
 
                 <div class="col-md-1">
@@ -174,7 +174,7 @@
                 </div>
 
                 <div class="col-md-5">
-                    <input id="campoTelefone" type="text" class="form-control" ng-minLength="5" placeholder="Celular do Usuário" ng-model="uc.usuario.celular" />
+                    <input id="campoTelefone" type="text" class="form-control" placeholder="Celular do Usuário" ng-model="uc.usuario.celular" />
                 </div>
 
             </div>
@@ -192,7 +192,7 @@
                     <button type="button" class="btn btn-danger" aria-label="Left Align" ng-click="deletar(uc.usuario)">
                       <span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span> Remover
                     </button>
-                    <button data-toggle="modal" data-target="#myModal" type="button" class="btn btn-default" aria-label="Left Align">
+                    <button ng-click="uc.consultarTodos()" data-toggle="modal" data-target="#myModal" type="button" class="btn btn-default" aria-label="Left Align">
                       <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Listar Todos
                     </button>
                 </div>
