Crud do cadastro de usuário PRONTO!

--- a/omaha-commerce/static/pages/usuario.html
+++ b/omaha-commerce/static/pages/usuario.html
@@ -189,7 +189,7 @@
                     <button type="text" ng-click="uc.salvar()" class="btn btn-success">
                       <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Salvar
                     </button>
-                    <button type="button" class="btn btn-danger" aria-label="Left Align" ng-click="deletar(uc.usuario)">
+                    <button type="button" class="btn btn-danger" aria-label="Left Align" ng-click="uc.remover(uc.usuario)">
                       <span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span> Remover
                     </button>
                     <button ng-click="uc.consultarTodos()" data-toggle="modal" data-target="#myModal" type="button" class="btn btn-default" aria-label="Left Align">
