Crud Categoria PRONTO!

--- a/omaha-commerce/static/pages/usuario.html
+++ b/omaha-commerce/static/pages/usuario.html
@@ -7,7 +7,7 @@
 
 <body>
 
-    <div class="container-fluid" ng-controller="UsuarioController as uc" ng-init="uc.init()">
+    <div class="container-fluid" ng-controller="UsuarioController as uc">
 
         <div class="page-header">
             <h3> Cadastro de Usuário </h3>
