--- a/omaha-commerce/static/pages/categoria.html
+++ b/omaha-commerce/static/pages/categoria.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <div class="container-fluid" ng-controller="CategoriaController as cc" ng-init="cc.init()">
+    <div class="container-fluid" ng-controller="CategoriaController as cc">
 
         <div class="page-header">
             <h3> Cadastro de Categorias de Produtos </h3>
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="col-md-8">
-                    <input id="campoNome" type="text" class="form-control" ng-minLength="5" placeholder="Descrição do Produto" ng-model="pc.produto.nome" />
+                    <input id="campoNome" type="text" class="form-control" placeholder="Descrição da Categoria" ng-model="cc.categoria.descricao" />
                 </div>
 
             </div>
@@ -41,16 +41,16 @@
 
             <div class="form-group">
                 <div class="col-sm-offset-1 col-sm-10">
-                    <button type="text" ng-click="uc.novo()" class="btn btn-primary">
+                    <button type="text" ng-click="cc.novo()" class="btn btn-primary">
                       <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Novo
                     </button>
-                    <button type="text" ng-click="uc.salvar()" class="btn btn-success">
+                    <button type="text" ng-click="cc.salvar()" class="btn btn-success">
                       <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Salvar
                     </button>
-                    <button type="button" class="btn btn-danger" aria-label="Left Align" ng-click="deletar(uc.usuario)">
+                    <button type="button" class="btn btn-danger" aria-label="Left Align" ng-click="cc.remover(cc.categoria)">
                       <span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span> Remover
                     </button>
-                    <button data-toggle="modal" data-target="#myModal" type="button" class="btn btn-default" aria-label="Left Align">
+                    <button ng-click="cc.consultarTodos()"  data-toggle="modal" data-target="#myModal" type="button" class="btn btn-default" aria-label="Left Align">
                       <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Listar Todos
                     </button>
                 </div>
@@ -67,48 +67,46 @@
                     </div>
                     <div class="modal-body">
                         <p>
-                            <div id="busca" class="form-group">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="input-group">
-                                            <div class="input-group-addon">Pesquisar</div>
-                                            <input type="text" class="form-control" id="campoPesquisar" ng-model="fitlroCategorias " placeholder="Digite aqui seu parâmetro de pesquisa" />
-                                        </div>
-                                    </div>
-                                </div>
-                        </p>
+                        <div id="busca" class="form-group">
+                          <div class="row">
+                              <div class="col-md-12">
+                                  <div class="input-group">
+                                      <div class="input-group-addon">Pesquisar</div>
+                                      <input type="text" class="form-control" id="campoPesquisar" ng-model="filtroCategorias " placeholder="Digite aqui seu parâmetro de pesquisa" />
+                                  </div>
+                              </div>
+                          </div>
+                          </p>
 
-                        <table class="table table-striped">
+                          <table class="table table-striped">
 
-                            <thead>
-                                <tr>
-                                    <th>Identificador</th>
-                                    <th>Descrição</th>
-                                    <th></th>
-                                </tr>
-                            </thead>
+                              <thead>
+                                  <tr>
+                                      <th>Identificador</th>
+                                      <th>Descrição</th>
+                                      <th></th>
+                                  </tr>
+                              </thead>
 
-                            <tbody>
-                                <!-- Listagem dos registros será aqui -->
+                              <tbody>
+                                  <!-- Listagem dos registros será aqui -->
 
-                                <tr ng-repeat="categoriaAtual in cc.categorias | filter: fitlroCategorias">
+                                  <tr ng-repeat="categoriaAtual in cc.categorias | filter: filtroCategorias">
 
-                                    <td> {{categoriaAtual.id}} </td>
-                                    <td> {{categoriaAtual.descricao}} </td>
-                                    <td> {{categoriaAtual.valor}} </td>
+                                      <td> {{categoriaAtual.id}} </td>
+                                      <td> {{categoriaAtual.descricao}} </td>
 
-                                    <td>
-                                        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="cc.editar(categoriaAtual)" ng-model="editar" data-toggle="tooltip" data-placement="left" title="Tooltip on left">
-                                          <span class="glyphicon glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                                      </button>
-                                    </td>
+                                      <td>
+                                          <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="cc.editar(categoriaAtual)" ng-model="editar" data-toggle="tooltip" data-placement="left" title="Tooltip on left">
+                                            <span class="glyphicon glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                        </button>
+                                      </td>
 
-                                </tr>
+                                  </tr>
 
-                            </tbody>
+                              </tbody>
 
-                        </table>
-
+                          </table>
                         </div>
                         </p>
                     </div>
