Crud Produto PRONTO!

--- a/omaha-commerce/static/pages/index.html
+++ b/omaha-commerce/static/pages/index.html
@@ -16,11 +16,13 @@
     <script src="../js/src/app/app.js"></script>
     <script src="../js/src/services/usuario.service.js"></script>
     <script src="../js/src/services/categoria.service.js"></script>
+    <script src="../js/src/services/produto.service.js"></script>
     <script src="../js/src/services/carrinho.service.js"></script>
     <script src="../js/src/services/login.service.js"></script>
     <script src="../js/src/services/loja.service.js"></script>
     <script src="../js/src/services/index.service.js"></script>
     <script src="../js/src/controllers/categoria.controller.js"></script>
+    <script src="../js/src/controllers/produto.controller.js"></script>
     <script src="../js/src/controllers/usuario.controller.js"></script>
     <script src="../js/src/controllers/login.controller.js"></script>
     <script src="../js/src/controllers/loja.controller.js"></script>
